[project]
name = "lambda"
version = "0.1.0"
description = ""
authors = [
    {name = "hiroshi-maruo",email = "mobu.otoko18@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.10"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
